--- a/src/components/SingleImageSlider/singleImageSlider.scss
+++ b/src/components/SingleImageSlider/singleImageSlider.scss
@@ -61,6 +61,10 @@
   align-items: center;
   transition: transform ease-in 0.1s;
 
+  &:not(first-of-type){
+    right: 85%;
+  }
+
   &:hover {
     transform: scale(1.1);
   }
@@ -94,4 +98,5 @@
     margin-top: -50px;
     justify-content: center;
     align-items: center;
+    border: 2px solid blue;
 }
