--- a/src/components/SingleImageSlider/singleImageSlider.scss
+++ b/src/components/SingleImageSlider/singleImageSlider.scss
@@ -22,7 +22,6 @@
 }
 
 .slider {
-  border: 1px solid green;
   position: relative;
   height: 500px;
   width: 500px;
@@ -31,7 +30,6 @@
 }
 
 .slider__slide {
-  // border: 1px solid purple;
   width: 100%;
   display: flex;
   align-items: center;
@@ -49,9 +47,9 @@
 }
 
 .arrow {
+  display: flex;
   position: absolute;
   top: 50%;
-  //  ${direction === 'right' ? `left:85%` : `right: 85%`};
   height: 50px;
   width: 50px;
   justify-content: center;
@@ -61,8 +59,8 @@
   align-items: center;
   transition: transform ease-in 0.1s;
 
-  &:not(first-of-type){
-    right: 85%;
+  &.right{
+    right: 0%;
   }
 
   &:hover {
@@ -70,8 +68,6 @@
   }
 
   img {
-    // transform: translateX(${direction === 'left' ? '-2' : '2'}px);
-
     &:focus {
       outline: 0;
     }
@@ -98,5 +94,4 @@
     margin-top: -50px;
     justify-content: center;
     align-items: center;
-    border: 2px solid blue;
 }
